fix: modification de couleur pour avoir des contrastes texte/fond accessible

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --color-purple-600: #9333ea;
   --color-purple-light: #c084fc;
   --color-purple-100: #f3e8ff;
-  --color-purple-dark: rgba(192, 132, 252, 0.1);
+  --color-purple-dark: rgb(33, 34, 63);
   
   --color-gray-light: #c4c4c4;
   
